--- a/style.css
+++ b/style.css
@@ -20,6 +20,18 @@ h1{
     box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
 }
 
+h3{
+    position: absolute;
+    width:280px;
+    left:calc(50vw - 140px);
+    bottom:30px;
+    color:#fff;
+    text-align: center;
+    font-weight:200;
+    font-size:.7em;
+    letter-spacing: 7px;
+}
+
 canvas{
     width:100%;
     height:100vh;
@@ -48,7 +60,7 @@ canvas, aside, div{
     padding:27px;
     background: rgb(255,255,255);
     background: linear-gradient(90deg, rgba(255,255,255,.5) 0%, rgba(255,255,255,0) 100%);
-    color:#1bffc1;
+    color:#fff;
     font-weight: 900;
     width:10vw;
 }
@@ -58,22 +70,31 @@ canvas, aside, div{
     padding:27px;
     background: rgb(255,255,255);
     background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,.5) 100%);
-    color:#1bffc1;
+    color:#fff;
     font-weight: 900;
     width:10vw;
     text-align: right;
+}
+
+#lives, #score{
+    color:#1bffc1;
 }
 
 #bottombar{
     display: flex;
     position:absolute;
     bottom:0px;
+    width:90vw;
+    left: 5vw;
+    bottom:30px;
+    border:1px solid rgba(255,255,255,.3);
+    border-radius: 50px;
 }
 
 .health-wrap{
-    width:50%;
-}
-
-.weapons-wrap{
-    width: 50%;
+    width:100%;
+    height:5px;
+    display:block;
+    background: #1bffc1;
+    border-radius: 50px;
 }
