--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ canvas, aside, div{
     bottom:30px;
     border:1px solid rgba(255,255,255,.3);
     border-radius: 50px;
+    pointer-events: none;
 }
 
 .health-wrap{
