--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ h3{
     font-size:.7em;
     letter-spacing: 7px;
     display:none;
+    pointer-events: none;
 }
 
 canvas{
@@ -139,7 +140,7 @@ canvas, aside, .bord{
     width:100%;
     height:5px;
     display:block;
-    background: #1bffc1;
+    background: linear-gradient(90deg, #1bffc1 0%, #18B5D5 100%);
     border-radius: 50px;
 }
 
